Bug 515795 - Missing translations in 5.3/5.4 nightlies, while 6.0/6.1 nightlies have no translations at all
Summary: Missing translations in 5.3/5.4 nightlies, while 6.0/6.1 nightlies have no tr...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Translation (other bugs)
Version First Reported In: 5.3.0-beta1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
: 508646 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-02-10 03:13 UTC by Tyson Tan
Modified: 2026-03-21 02:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krita File menu missing translations (105.33 KB, image/png)
2026-02-10 03:13 UTC, Tyson Tan
Details
Krita Settings menu missing translations (71.34 KB, image/png)
2026-02-10 03:13 UTC, Tyson Tan
Details
Krita Help menu missing translations (86.12 KB, image/png)
2026-02-10 03:14 UTC, Tyson Tan
Details
Krita 6.1.0 nightly has no translation available (119.97 KB, image/png)
2026-02-10 03:15 UTC, Tyson Tan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2026-02-10 03:13:26 UTC
Created attachment 189419 [details]
Krita File menu missing translations

Translations are missing in the following main menu items:

File -> Open Recent
Settings -> Configure Language
About -> Krita Handbook
About -> Report Bug
About -> About Krita
About -> About KDE

I reported this as a side note in bug 508646, although now I doubt them to be caused by the same issue in that bug. So I opened a new one.

This happens in all languages. I suspect it to be caused by kxmlgui update in the new Krita versions. Perhaps the new kxmlgui's strings not being included in krita.pot

The 6.1.0 nightlies have no translation at all. Only English is available. 6.0.0 beta 1 has translation.
Comment 1 Tyson Tan 2026-02-10 03:13:47 UTC
Created attachment 189420 [details]
Krita Settings menu missing translations
Comment 2 Tyson Tan 2026-02-10 03:14:06 UTC
Created attachment 189421 [details]
Krita Help menu missing translations
Comment 3 Tyson Tan 2026-02-10 03:15:35 UTC
Created attachment 189422 [details]
Krita 6.1.0 nightly has no translation available
Comment 4 Tyson Tan 2026-02-10 08:20:40 UTC
Correction: Krita 6.0.0 also has no translation available.
Comment 5 wolthera 2026-03-12 13:48:49 UTC
I can reproduce missing translations locally, as could one of the translations on matrix.

Like, the languages are listed, so Krita *is* finding something, but it doesn't do anything...
Comment 6 wolthera 2026-03-12 13:51:52 UTC
*** Bug 517257 has been marked as a duplicate of this bug. ***
Comment 7 wolthera 2026-03-12 14:42:36 UTC
*** Bug 508646 has been marked as a duplicate of this bug. ***
Comment 8 wolthera 2026-03-12 14:43:17 UTC
Ok, so digging further:

1. qt6 has no translations.
2. 5.3 has incomplete translations, but some are missing (release blocker)
3. android doesn't do translations properly?
Comment 9 wolthera 2026-03-12 15:45:46 UTC
ok, some more investigating, and it looks like indeed, all the troublesome strings are related to kxmlgui, but the weird thing is, we keep our own copy of that.

My suspicion is that there's some processing happening with scripty that removes kxmlgui translations, because they assumed that krita doesn't have their own kxmlgui, but is using the upstream one.
Comment 10 wolthera 2026-03-12 15:50:50 UTC
Most likely culprit is that something got typoed in https://invent.kde.org/graphics/krita/-/blob/43eb5a51320866165d5f963159447c3bf89efca8/Messages.sh , but I barely can read bash script :(
Comment 11 wolthera 2026-03-13 14:06:42 UTC
So, all I can state right now is that there's something odd going on with the PO files.

it and nl po files have something like...

#~ msgid "New File"
#~ msgstr "Nuovo file"

and...

#~ msgctxt "(qtundo-format) action"
#~ msgid "&About Krita"
#~ msgstr "&Over Krita"

#~ msgctxt "(qtundo-format) action"
#~ msgid "About Krita"
#~ msgstr "Over Krita"

While this is missing from zh_CN. 

https://l10n.kde.org/docs/translation-howto/gui-step-by-step.html suggests these are provisionally commented out strings. So I guess the big problem is why scripty is marking these strings as commented out. changes to https://invent.kde.org/graphics/krita/-/blob/master/Messages.sh is the most likely, but I don't understand what is going on here.
Comment 12 wolthera 2026-03-13 14:09:04 UTC
No, it can't be caused by changed to messages.sh, because there were no changed 6 months ago, while that was when the problems started showing...
Comment 13 Dmitry Kazakov 2026-03-16 21:48:57 UTC
Git commit 26961e53a3ddb39b3e26feb722adcfbf0999d7c2 by Dmitry Kazakov.
Committed on 16/03/2026 at 21:48.
Pushed by dkazakov into branch 'krita/6.0'.

Fix translations for standard actions

This is a dirty hack for the issues in our copy of
KStandardActions. We cannot use QT_TRANSLATE_NOOP
in KDE's translation system, so the translations work by
pure coincidence.

Ideally we should switch back to the upstream version of KConfigWidgets and reuse the strings provided by KDE.

M  +6    -6    libs/widgetutils/config/kstandardaction.cpp
M  +21   -5    libs/widgetutils/config/kstandardaction_p.h

https://invent.kde.org/graphics/krita/-/commit/26961e53a3ddb39b3e26feb722adcfbf0999d7c2
Comment 14 Dmitry Kazakov 2026-03-16 21:49:53 UTC
Git commit 5201fe7b154327edd095d231d43991b7afda8897 by Dmitry Kazakov.
Committed on 16/03/2026 at 21:49.
Pushed by dkazakov into branch 'master'.

Fix translations for standard actions

This is a dirty hack for the issues in our copy of
KStandardActions. We cannot use QT_TRANSLATE_NOOP
in KDE's translation system, so the translations work by
pure coincidence.

Ideally we should switch back to the upstream version of KConfigWidgets and reuse the strings provided by KDE.

M  +6    -6    libs/widgetutils/config/kstandardaction.cpp
M  +21   -5    libs/widgetutils/config/kstandardaction_p.h

https://invent.kde.org/graphics/krita/-/commit/5201fe7b154327edd095d231d43991b7afda8897
Comment 15 Tyson Tan 2026-03-17 00:22:06 UTC
Thank you, Dmitry and Wolthera! :)
Comment 16 Tyson Tan 2026-03-20 04:50:39 UTC
Today I found out that the actions in Main Menu -> Settings -> Configure Toolbars have mismatched items too:

--- separator ---
About KDE
About Krita
Configure Language...
Krita Handbook
Mutate
Open Recent
Report Bug...

"--- separator ---" doesn't have a matching string in Krita's POT file. 
The others have matching string on the surface, But I think they are not using the same ID. 
Mutate don't have translation in the Tool menu.
Comment 17 Dmitry Kazakov 2026-03-20 07:41:25 UTC
Hi, Tyson!

Could you please check in the AppImage packges generated for the release? We did a few fixes yesterday, and the commits are only in the release branch: https://invent.kde.org/graphics/krita/-/pipelines/1195488
Comment 18 Tyson Tan 2026-03-20 08:33:46 UTC
Hi Dmitry.
The release appimage has no translations for the following strings in Configure Toolbar dialogue:

--- separator ---
Mutate

The others are fixed. This shouldn't be a release blocker, I think?

BTW, I could not install the Android ARM v8a APK, Samsung Tab S8 reported "Invalid APK Installer". So I couldn't confirm what is happening there.
Comment 19 Tyson Tan 2026-03-20 08:40:58 UTC
Mutate also doesn't have translation in the Tool menu.

The new strings Tiar added for Bug 517593 yesterday were included in the release build, but they haven't been translated and synced back to SVN. This is not part of the bug, of course.
Comment 20 Dmitry Kazakov 2026-03-20 13:07:52 UTC
Hi, Tyson!

> Mutate also doesn't have translation in the Tool menu.

Mutate is neither translated in the Qt5-based version. It just doesn't have translation macro, I'll fix it in a minute.

> The others are fixed. 

Good, the the bug is fixed! :)

> I could not install the Android ARM v8a APK, Samsung Tab S8 reported "Invalid APK Installer"

I guess it is because the package is not signed, it should be installed in some special way.
Comment 21 Dmitry Kazakov 2026-03-20 13:09:48 UTC
Git commit b81ffc42419b77908239043f524a813d6866aee7 by Dmitry Kazakov.
Committed on 20/03/2026 at 13:09.
Pushed by dkazakov into branch 'master'.

[new string] Add translation to the Mutate action

M  +1    -1    plugins/python/mutator/mutator.py

https://invent.kde.org/graphics/krita/-/commit/b81ffc42419b77908239043f524a813d6866aee7
Comment 22 Tyson Tan 2026-03-20 14:00:15 UTC
Thanks, Dmitry.

About the APK...I was able to install the 5.4.0 nightly APKs though. That's also unsigned, right? Never had a problem installing any Krita APKs in the past.
Comment 23 Tyson Tan 2026-03-20 14:06:54 UTC
Just checked:
krita-arm64-v8a-5.4.0-prealpha-a6e2f354-nightly.apk (2026-03-14) can be installed without issue.
Comment 24 Tyson Tan 2026-03-21 02:17:14 UTC
I was able to install:
krita-arm64-v8a-5.4.0-prealpha-b81ffc42-nightly.apk (2026-03-21).
The kxmlgui related translations were fixed.

Still missing translations (Android), old problems:
Create New Document dialogue > Templates names 
Tablet Settings > Maximum brush speed and Brush speed smoothing