Fix translations for standard actions

This is a dirty hack for the issues in our copy of
KStandardActions. We cannot use QT_TRANSLATE_NOOP
in KDE's translation system, so the translations work by
pure coincidence.

Ideally we should switch back to the upstream version of KConfigWidgets and reuse the strings provided by KDE.

BUG:515795